Changes to run scripts so Heroku can find tsc

--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
         "typescript": "^3.9.5"
     },
     "scripts": {
-        "start": "tsc && node dist/index.js",
-        "build": "tsc"
+        "start": "npx yarn run build && node dist/index.js",
+        "build": "npx yarn run tsc",
+        "tsc": "tsc"
     }
 }
